# PolyformRPG

./: CMakeLists.txt  PolyformRPG.sln  PolyformRPG.vcxproj  PolyformRPG.vcxproj.filters  README.md  add_class.py  main.cpp
include/: Character.hpp  Game.hpp  GameObjects.hpp  Interface.hpp  Inventory.hpp  Items.hpp  NPC.hpp  Player.hpp  ResourceManager.hpp  ShapeType.hpp  States.hpp  Utils.hpp  World.hpp
include/other/: random.hpp  timer.hpp
src/: Character.cpp  Game.cpp  GameObjects.cpp  Interface.cpp  Inventory.cpp  Items.cpp  NPC.cpp  Player.cpp  ResourceManager.cpp  ShapeType.cpp  States.cpp  Utils.cpp  World.cpp
